<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <TBianco.Drawing.First.MySurface
        android:id="@+id/drawingArea"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="11" />

    <LinearLayout
        android:id="@+id/Toolbar"
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center_vertical|fill_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Save"
            android:src="@drawable/save" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Delete"
            android:src="@android:drawable/ic_menu_delete"
            android:onClick="deleteClick" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnPicture"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Picture"
            android:src="@android:drawable/ic_menu_camera" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <RadioGroup
            android:id="@+id/rgModeSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rDraw"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:button="@drawable/squiggle_selector"
                android:onClick="modeChangeClick"
                android:checked="true"  />

            <RadioButton
                android:id="@+id/rText"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:button="@drawable/text_selector"
                android:onClick="modeChangeClick" />

            <RadioButton
                android:id="@+id/rShapes"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:button="@drawable/shapes_selector"
                android:onClick="modeChangeClick" />

            <RadioButton
                android:id="@+id/rErase"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:button="@drawable/eraser_selector"
                android:onClick="modeChangeClick" />

            <RadioButton
                android:id="@+id/rScroll"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:button="@drawable/scroll_selector"
                android:onClick="modeChangeClick" />
            
        </RadioGroup>

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnColor"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@color/orange"
            android:contentDescription="@string/Color"
            android:onClick="colorPickerClick" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <RadioGroup
            android:id="@+id/rgSizeSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/fine_selector"
                android:onClick="sizeChangeClick"/>

            <RadioButton
                android:id="@+id/rMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/medium_selector"
				android:checked="true"
                android:onClick="sizeChangeClick" />

            <RadioButton
                android:id="@+id/rLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/thick_selector"
                android:onClick="sizeChangeClick" />
        </RadioGroup>

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnGrid"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Grid"
            android:src="@drawable/grid" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnPrevious"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Previous"
            android:src="@drawable/previous"
            android:onClick="previousClick" />

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Add"
            android:src="@android:drawable/ic_menu_add"
            android:onClick="newClick" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Next"
            android:src="@drawable/next"
            android:onClick="nextClick" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnUndo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Undo"
            android:src="@drawable/undo"
            android:onClick="undoClick" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnRedo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Redo"
            android:src="@drawable/redo"
            android:onClick="redoClick" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Home"
            android:src="@drawable/home"
            android:onClick="homeClick" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnConnection"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Connection"
            android:src="@drawable/connect"
            android:onClick="connectClick" />

        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/buttonbg"
            android:contentDescription="@string/Help"
            android:src="@drawable/help" />
        
        <Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/relativeview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            
        <TextView
            android:id="@+id/pageTracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pages"
            android:layout_alignParentRight="true"
            android:singleLine="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/pagecounter" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>